# steamtricker

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  steamtricker.cc
src/hook/: CMakeLists.txt  hook.c  hook.h
src/steamapi/: CMakeLists.txt  api.cc  api.h  apps.cc  apps.h  callbacks.h  client.cc  client.h  friends.cc  friends.h  gamecoordinator.cc  gamecoordinator.h  gameserver.cc  gameserver.h  gamestats.cc  gamestats.h  masterserverupdater.cc  masterserverupdater.h  matchmaking.cc  matchmaking.h  networking.cc  networking.h  remotestorage.cc  remotestorage.h  types.h  user.cc  user.h  userstats.cc  userstats.h  utils.cc  utils.h
